  . Fixed bug #71441 (Typehinted Generator with return in try/finally crashes).
    (Bob)

- Fileinfo:
  . Fixed bug #71434 (finfo throws notice for specific python file). (Laruence)

- FPM:
  . Fixed bug #62172 (FPM not working with Apache httpd 2.4 balancer/fcgi setup).
    (Matt Haught, Remi)

- Standard:
  . Fixed bug #70720 (strip_tags improper php code parsing). (Julien)

04 Feb 2016 PHP 7.0.3

- Core:
  . Added support for new HTTP 451 code. (Julien)
  . Fixed bug #71039 (exec functions ignore length but look for NULL termination).
    (Anatol)
  . Fixed bug #71089 (No check to duplicate zend_extension). (Remi)
  . Fixed bug #71201 (round() segfault on 64-bit builds). (Anatol)
  . Fixed bug #71221 (Null pointer deref (segfault) in get_defined_vars via
    ob_start). (hugh at allthethings dot co dot nz)
  . Fixed bug #71248 (Wrong interface is enforced). (Dmitry)
  . Fixed bug #71273 (A wrong ext directory setup in php.ini leads to crash).
    (Anatol)
  . Fixed Bug #71275 (Bad method called on cloning an object having a trait).
    (Bob)
  . Fixed bug #71297 (Memory leak with consecutive yield from). (Bob)
  . Fixed bug #71300 (Segfault in zend_fetch_string_offset). (Laruence)
  . Fixed bug #71314 (var_export(INF) prints INF.0). (Andrea)
  . Fixed bug #71323 (Output of stream_get_meta_data can be falsified by its 
    input). (Leo Gaspard)
  . Fixed bug #71336 (Wrong is_ref on properties as exposed via
    get_object_vars()). (Laruence)
  . Fixed bug #71459 (Integer overflow in iptcembed()). (Stas)

- Apache2handler:
  . Fix >2G Content-Length headers in apache2handler. (Adam Harvey)

- CURL:
  . Fixed bug #71227 (Can't compile php_curl statically). (Anatol)
  . Fixed bug #71225 (curl_setopt() fails to set CURLOPT_POSTFIELDS with
    reference to CURLFile). (Laruence)

- Interbase:
  . Fixed Bug #71305 (Crash when optional resource is omitted).
  (Laruence, Anatol)

- LDAP:
  . Fixed bug #71249 (ldap_mod_replace/ldap_mod_add store value as string